...
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Заметки" largeTitleDisplayMode="always" id="ArT-ex-i1r">
                        <barButtonItem key="rightBarButtonItem" image="square.and.pencil" catalog="system" id="Uex-ih-Q6O">
                            <color key="tintColor" systemColor="systemBlueColor"/>
...
                    </tableView>
                    <navigationItem key="navigationItem" title="Заметки" id="Kqh-OT-zYe">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="square.and.pencil" catalog="system" id="IY2-2j-Q46">
                            <color key="tintColor" systemColor="systemBlueColor"/>
                            <connections>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Напоминания" id="cPj-Nu-EU3">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Kdf-we-BjA">
                            <connections>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Save">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Цели" id="R7N-kx-Z3t">
                        <rightBarButtonItems>
                            <barButtonItem systemItem="add" id="uQE-WL-BoL">
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="23"/>
                                <state key="normal" title="Завершенные">
                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                        <accessibility key="accessibilityConfiguration" identifier="MenuViewController"/>
                    </view>
                    <navigationItem key="navigationItem" title="Меню" id="5vA-HE-xCg">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="settings" id="9t1-Y9-kLO">
                            <connections>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Очистить корзину">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <accessibility key="accessibilityConfiguration" identifier="clearTargetIdentifier"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Очистить цели">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Очистить заметки">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
