...
            }
            
            let alertAction1 = UIAlertAction(title: "Отмена", style: .default) { (alert) in
                
            }
            
            let alertAction2 = UIAlertAction(title: "Добавить", style: .cancel) { (alert) in
                let newItem = alertController.textFields![0].text
                addTarget(nameItem: newItem!)
                self.tableView.reloadData()
            }
            
            alertController.addAction(alertAction1)
            alertController.addAction(alertAction2)
            
            DispatchQueue.main.async {
                alertController.view.accessibilityIdentifier = "successAlertAddTarget"
                self.present(alertController, animated: true, completion: nil)
            }
        }
        
        override func viewDidLoad() {
            super.viewDidLoad()
...
